--- a/.github/workflows/git_to_eks.yaml
+++ b/.github/workflows/git_to_eks.yaml
@@ -5,8 +5,8 @@ name: Portfolio app CI/CD
 
 on:
  
-  push:
-    branches: [ main ]
+  # push:
+  #   branches: [ main ]
   pull_request:
     branches:
       - main
